--- a/install_apache.yml
+++ b/install_apache.yml
@@ -13,3 +13,8 @@
      service:
       name: httpd
       state: started
+
+   - name: install nginx
+     yum:
+      name: nginx
+      state: present
